--- a/public/css/schedule.css
+++ b/public/css/schedule.css
@@ -306,7 +306,7 @@
     }
     .cd-schedule .events .single-event.selected-event {
       /* the .selected-event class is added when an user select the event */
-      visibility: hidden;
+
     }
   }
   
@@ -613,6 +613,7 @@
         -ms-transform: translateX(0);
             transform: translateX(0);
     visibility: visible;
+    opacity: 0;
   }
   
   .cd-schedule.modal-is-open .event-modal .event-info > div {
@@ -625,7 +626,7 @@
     .cd-schedule.content-loaded.animation-completed .event-modal .event-info {
       /* 	the .animation-completed class is added when the modal animation is completed
               the .content-loaded class is added when the modal content has been loaded (using ajax) */
-      opacity: 1;
+      opacity: 0;
       -webkit-transition: opacity .2s;
       transition: opacity .2s;
     }
@@ -648,15 +649,16 @@
     left: 0;
     height: 100%;
     width: 100%;
-    background: rgba(0, 0, 0, 0.8);
-    opacity: 0;
+    display:none;
     visibility: hidden;
     -webkit-transition: opacity .4s, visibility .4s;
     transition: opacity .4s, visibility .4s;
   }
-  
+  .single-event1 {
+    display: none;
+  }
   .cd-schedule.modal-is-open .cover-layer {
-    opacity: 1;
+    opacity:0;
     visibility: visible;
   }
   
