--- a/public/css/schedule.css
+++ b/public/css/schedule.css
@@ -33,6 +33,9 @@
   footer, header, hgroup, menu, nav, section, main {
       display: block;
   }
+  html {
+    font-size: 1rem;
+  }
   body {
       line-height: 1;
   }
@@ -63,7 +66,7 @@
   }
   
   html {
-    font-size: 62.5%;
+    font-size:1rem;
   }
   
   body {
@@ -96,8 +99,8 @@
   
   @media only screen and (min-width: 800px) {
     .cd-schedule {
-      width: 90%;
-      max-width: 1400px;
+      width: 100%;
+      max-width: 1200px;
       margin: 2em auto;
     }
     .cd-schedule::after {
@@ -121,7 +124,7 @@
       top: 0;
       left: 0;
       height: 100%;
-      width: 100%;
+      width: 96%;
       padding-top: 50px;
     }
     .cd-schedule .timeline li {
@@ -212,6 +215,7 @@
     height: 150px;
     width: 70%;
     max-width: 300px;
+    
     box-shadow: inset 0 -3px 0 rgba(0, 0, 0, 0.2);
     margin-right: 20px;
     -webkit-transition: opacity .2s, background .2s;
@@ -220,8 +224,10 @@
   
   .cd-schedule .events .single-event:last-of-type {
     margin-right: 5%;
+    top: 498.545px ;
   }
   
+
   .cd-schedule .events .single-event a {
     display: block;
     height: 100%;
@@ -231,6 +237,7 @@
   @media only screen and (min-width: 550px) {
     .cd-schedule .events .single-event {
       width: 40%;
+    
     }
   }
   
@@ -240,7 +247,7 @@
       width: 100%;
     }
     .cd-schedule .events .events-group {
-      width: 14%;
+      width: 16%;
       float: left;
       border: 1px solid #EAEAEA;
       /* reset style */
@@ -268,7 +275,7 @@
       margin-bottom: 0;
     }
     .cd-schedule .events .events-group > ul {
-      height: 950px;
+      height: 1150px;
       /* reset style */
       display: block;
       overflow: visible;
@@ -661,4 +668,6 @@
     opacity:0;
     visibility: visible;
   }
+  
+
   
